--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 						&nbsp &nbsp &nbsp // &nbsp &nbsp &nbsp Website dedicated to Andreza Michel</p>
 					</header>
 
+					<div align="center"><h1>Foundation Series</h1></div>
+
 					<section class="tiles">
 
 						<article class="style2">
@@ -166,6 +168,27 @@
 								<h2>6 - Foundation's Edge</h2>
 								<div class="content">
 									<p>(1982)</p>
+								</div>
+							</a>
+						</article>
+
+
+					</section>
+
+					<br><br><br>
+
+					<div align="center"><h1>Other Books</h1></div>
+
+					<section class="tiles">
+
+						<article class="style2">
+							<span class="image">
+								<img src="Books/I_Robot/irobot_cover.jpg" alt="" />
+							</span>
+							<a href="Books/I_Robot/irobot.html">
+								<h2>I, Robot</h2>
+								<div class="content">
+									<p>(1950)</p>
 								</div>
 							</a>
 						</article>
