--- a/index.html
+++ b/index.html
@@ -192,6 +192,18 @@
 							</a>
 						</article>
 
+						<article class="style3">
+							<span class="image">
+								<img src="Books/Naked_Sun/naked_sun_cover.jpg" alt="" />
+							</span>
+							<a href="Books/Naked_Sun/nakedsun.html">
+								<h2>The Naked Sun</h2>
+								<div class="content">
+									<p>(1957)</p>
+								</div>
+							</a>
+						</article>
+
 
 					</section>
 
