The Robots of Dawn

--- a/index.html
+++ b/index.html
@@ -204,6 +204,18 @@
 							</a>
 						</article>
 
+						<article class="style4">
+							<span class="image">
+								<img src="Books/Robots_Dawn/robots_dawn_cover.jpg" alt="" />
+							</span>
+							<a href="Books/Robots_Dawn/robotsdawn.html">
+								<h2>The Robots of Dawn</h2>
+								<div class="content">
+									<p>(1983)</p>
+								</div>
+							</a>
+						</article>
+
 
 					</section>
 
