The End of Eternity

--- a/index.html
+++ b/index.html
@@ -241,6 +241,19 @@
 						</article>
 
 
+						<article class="style3">
+							<span class="image">
+								<img src="Books/End_Eternity/end_eternity_cover.jpg" alt="" />
+							</span>
+							<a href="Books/End_Eternity/endeternity.html">
+								<h2>The End of Eternity</h2>
+								<div class="content">
+									<p>(1955)</p>
+								</div>
+							</a>
+						</article>
+
+
 					</section>
 
 
